fixed error where sidebar was too wide
partially couldn't select event

--- a/asset/css/expenses.css
+++ b/asset/css/expenses.css
@@ -9,7 +9,6 @@
     min-height: 80px;
     position: fixed;
     top: 80px;
-    width: 650px;
     z-index: 4;
 }
 .expensesList {
